[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nshm-oq"
authors = [{name="QuakeCoRE"}]
description = "A library for running the 2022 NZ NSHM via OpenQuake"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}